# AlgoTradeX

./: .gitignore  ARCHITECTURE.md  Package & Version.txt  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
algotradex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
artifacts/aapl_ppo_20260316_153924/: config_snapshot.yaml  dataset_summary.json  feature_scaler.json  report.md  summary.json  test_history.csv  test_metrics.json  validation_history.csv  validation_metrics.json
models/: __init__.py  alpha_models.py  forecaster.py  market_intelligence.py
risk/: __init__.py  risk_engine.py
strategies/: __init__.py  algotradex_strategies.py  signal_engine.py
tests/: test_engine.py
utils/: backtesting_engine.py  data_utils.py
