[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algotradex"
version = "0.1.0"
description = "Reinforcement-learning research sandbox for autonomous algorithmic trading."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vijay Rathod" }]
dependencies = [
  "gymnasium>=0.29,<1.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "yfinance>=0.2.40",
  "plotly 6.6.0"
]

[project.optional-dependencies]
app = [
  "plotly>=5.22",
  "stable-baselines3>=2.3.0",
  "streamlit>=1.36",
]
rl = ["stable-baselines3>=2.3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
algotradex = "algotradex.cli:main"

[tool.setuptools.packages.find]
include = ["algotradex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
